# cpp-monolith-template

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.bash
.github/workflows/: cmake.yml
